<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="org.landroo.netcam.CamServerActivity" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <FrameLayout
            android:id="@+id/senderPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </FrameLayout>
    </RelativeLayout>    

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <RadioGroup
            android:id="@+id/senderSizeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">
        </RadioGroup>
    </ScrollView>

    <RadioGroup
        android:id="@+id/senderCameraGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">
    </RadioGroup>

    <RadioGroup
        android:id="@+id/senderVisibleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/senderCameraGroup">

        <RadioButton
            android:id="@+id/senderPreviewVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/preview_visible"/>

        <RadioButton
            android:id="@+id/senderPreviewInvisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_invisible"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/senderInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sentImages"
            android:visibility="invisible"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>
