<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF000000"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/tab1Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:padding="5dip"
            android:text="@string/receiver_view"
            android:textColor="#FF000000" />

        <Button
            android:id="@+id/tab2Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:padding="5dip"
            android:text="@string/sender_view"
            android:textColor="#FF000000" />

        <Button
            android:id="@+id/tab3Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:padding="5dip"
            android:text="@string/ipcam_server"
            android:textColor="#FF000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/receiverTab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFFFF"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FF000000"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FF000000"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />
        </LinearLayout>

        <Button
            android:id="@+id/receiverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border1"
            android:padding="10dip"
            android:text="@string/start_receiver"
            android:textColor="#FF000000" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dip"
            android:scaleType="centerInside"
            android:src="@drawable/receiver" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/senderTab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFFFF"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FF000000"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FF000000"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />
        </LinearLayout>

        <Button
            android:id="@+id/senderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border1"
            android:padding="10dip"
            android:text="@string/start_sender"
            android:textColor="#FF000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="5dip"
                android:text="@string/receiver_ip_address"
                android:textColor="#FF000000" />

            <EditText
                android:id="@+id/ipEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border1"
                android:ems="10"
                android:maxLength="15"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:padding="5dip"
                android:textColor="#FF000000" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dip"
            android:scaleType="centerInside"
            android:src="@drawable/sender" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serverTab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-5dp"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#FFFFFFFF"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FF000000"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FF000000"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:background="#FFFFFFFF"
                android:gravity="center_horizontal"
                android:orientation="horizontal" />
        </LinearLayout>

        <Button
            android:id="@+id/serverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border1"
            android:padding="10dip"
            android:text="@string/start_server"
            android:textColor="#FF000000" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dip"
            android:scaleType="centerInside"
            android:src="@drawable/server" />
    </LinearLayout>

</LinearLayout>